# resident_scheduler

./: plan.md  pyproject.toml  spec.md  test_scheduler.py
src/: adapters.py
src/base/: objects.py  shift.py
src/formats/: readers.py
src/resident_scheduler/: main.py  scheduler.py
tests/: test_read_residents.py  test_read_shifts.py
tests/base/: test_shift.py
tests/resident_scheduler/: test_scheduler.py
