[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "resident-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "pytest==8.3.5",
    "ortools==9.12.4544",
]

[tool.uv.build-backend]
module-root = "src"
